# measureme

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: nightly.yml  publish.yml  rust.yml
analyzeme/: Cargo.toml  README.md
analyzeme/benches/: serialization_bench.rs
analyzeme/src/: analysis.rs  event.rs  event_payload.rs  lib.rs  lightweight_event.rs  profiling_data.rs  stack_collapse.rs  stringtable.rs  testing_common.rs
analyzeme/src/file_formats/: mod.rs  v7.rs  v8.rs  v9.rs
analyzeme/src/file_formats/analyzeme_9_2_0/: event.rs  lightweight_event.rs  mod.rs  profiling_data.rs  stack_collapse.rs  stringtable.rs  testing_common.rs  timestamp.rs
analyzeme/src/file_formats/decodeme_10_1_2/: event.rs  event_payload.rs  lightweight_event.rs  mod.rs  stringtable.rs
analyzeme/src/file_formats/measureme_10_1_2/: counters.rs  event_id.rs  file_header.rs  mod.rs  profiler.rs  raw_event.rs  stringtable.rs
analyzeme/src/file_formats/measureme_9_2_0/: counters.rs  event_id.rs  file_header.rs  mod.rs  profiler.rs  raw_event.rs  serialization.rs  stringtable.rs
analyzeme/tests/: serialization.rs
crox/: Cargo.toml  README.md  Readme.md
crox/src/: main.rs
decodeme/: Cargo.toml  README.md
decodeme/src/: event.rs  event_payload.rs  lib.rs  lightweight_event.rs  stringtable.rs  timestamp.rs
examples/: end_to_end.rs
flamegraph/: Cargo.toml  README.md
flamegraph/src/: main.rs
measureme/: Cargo.toml
measureme/benches/: serialization_bench.rs
measureme/src/: async_mmap_serialization_sink.rs  counters.rs  event.rs  event_id.rs  file_header.rs  file_serialization_sink.rs  lib.rs  mmap_serialization_sink.rs  profiler.rs  profiling_data.rs  raw_event.rs  rustc.rs  serialization.rs  stringtable.rs  testing_common.rs
measureme/tests/: serialization.rs
mmedit/: Cargo.toml  README.md
mmedit/src/: main.rs
mmview/: Cargo.toml  README.md
mmview/src/: main.rs
src/: event.rs  lib.rs  profiler.rs  profiling_data.rs  serialization.rs  stringtable.rs
stack_collapse/: Cargo.toml  README.md
stack_collapse/src/: main.rs  stack_collapse.rs
summarize/: Cargo.toml  README.md  Readme.md
summarize/src/: aggregate.rs  analysis.rs  diff.rs  main.rs  query_data.rs  signed_duration.rs
tools_lib/: Cargo.toml
tools_lib/benches/: serialization_bench.rs
tools_lib/src/: lib.rs  profiling_data.rs  stack_collapse.rs
tools_lib/tests/: serialization.rs
tracing-measureme/: Cargo.toml
tracing-measureme/src/: lib.rs
version_checker/: Cargo.toml
version_checker/src/: main.rs
