[workspace]

members = [
    "analyzeme",
    "crox",
    "decodeme",
    "flamegraph",
    "measureme",
    "mmview",
    "stack_collapse",
    "summarize",
    "mmedit",
]

[workspace.package]
version = "12.0.3"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/measureme"

[workspace.dependencies]
analyzeme = { version = "12.0.3", path = "analyzeme" }
decodeme = { version = "12.0.3", path = "decodeme" }
decodeme_10 = { version = "10.1.3", package = "decodeme" }
measureme = { version = "12.0.3", path = "measureme" }
measureme_10 = { version = "10.1.3", package = "measureme" }

clap = { version = "4.5.0", features = ["derive"] }
flate2 = "1.0"
inferno = { version = "0.11", default-features = false }
log = "0.4"
memchr = "2"
memmap2 = "0.2.1"
parking_lot = "0.12.0"
perf-event-open-sys = "3.0.0"
prettytable-rs = "0.10"
rustc-hash = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.0"
