[package]
name = "analyzeme"
description = "Provides common functionality for measureme tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
decodeme.workspace = true
measureme.workspace = true
memchr.workspace = true
rustc-hash.workspace = true
serde.workspace = true

# Depending on older versions of this crate allows us to keep supporting older
# file formats.

# File format: v8
decodeme_10.workspace = true
measureme_10.workspace = true

[dev-dependencies]
flate2.workspace = true
