[package]
name = "crox"
description = "Turns `measureme` profiling data into files that can be visualized by the Chromium performance tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
analyzeme.workspace = true
clap.workspace = true
measureme.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
