[package]
name = "crox"
version = "10.1.3"
authors = ["Wesley Wiser <wwiser@gmail.com>"]
edition = "2018"

[dependencies]
measureme = { path = "../measureme" }
analyzeme = { path = "../analyzeme" }
rustc-hash = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2", features = ["derive"] }
