[package]
name = "decodeme"
version = "10.0.0-alpha"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
measureme = { path = "../measureme" }
memchr = "2"
rustc-hash = "1.0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
