[package]
name = "decodeme"
description = "Decoding definitions of the profiling event data from `measureme`"
version = "10.1.3"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/measureme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
measureme = { version = "10.1.3", path = "../measureme" }
memchr = "2"
rustc-hash = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
