[package]
name = "flamegraph"
version = "11.0.1"
authors = [
    "Wesley Wiser <wwiser@gmail.com>",
    "Michael Woerister <michaelwoerister@posteo>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
measureme = { path = "../measureme" }
analyzeme = { path = "../analyzeme" }
clap = { version = "3.2", features = ["derive"] }
inferno = { version = "0.11", default-features = false }
