[package]
name = "flamegraph"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
measureme = { path = "../measureme" }
analyzeme = { path = "../analyzeme" }
clap = { version = "4.5.0", features = ["derive"] }
inferno = { version = "0.11", default-features = false }
