[package]
name = "flamegraph"
description = "Reads `measureme` profiling data and outputs Flame Graph"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
analyzeme.workspace = true
clap.workspace = true
inferno.workspace = true
measureme.workspace = true
