[package]
name = "measureme"
version = "9.1.0"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
description = "Support crate for rustc's self-profiling feature"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/measureme"
homepage = "https://github.com/rust-lang/measureme"
repository = "https://github.com/rust-lang/measureme"

[badges]
travis-ci = { repository = "rust-lang/measureme" }

[dependencies]
log = "0.4"
parking_lot = "0.11.0"
rustc-hash = "1.0.1"
smallvec = "1.0"

[features]
nightly = []

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
memmap2 = "0.2.1"
perf-event-open-sys = "1.0.1"
