[package]
name = "measureme"
version.workspace = true
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition.workspace = true
description = "Support crate for rustc's self-profiling feature"
license.workspace = true
repository = "https://github.com/rust-lang/measureme"

[dependencies]
log = "0.4"
parking_lot = "0.12.0"
rustc-hash = "1.0.1"
smallvec = "1.0"

[features]
nightly = []

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
memmap2 = "0.2.1"
perf-event-open-sys = "3.0.0"
