[package]
name = "mmview"
version = "11.0.1"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
license.workspace = true

[dependencies]
analyzeme = { path = "../analyzeme" }
measureme = { path = "../measureme" }
clap = { version = "4.5.0", features = ["derive"] }
