[package]
name = "mmview"
version.workspace = true
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
analyzeme = { path = "../analyzeme" }
measureme = { path = "../measureme" }
clap = { version = "4.5.0", features = ["derive"] }
