[package]
name = "stack_collapse"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
analyzeme = { path = "../analyzeme" }
clap = { version = "4.5.0", features = ["derive"] }
measureme = { path = "../measureme" }
