[package]
name = "stack_collapse"
description = "Reads `measureme` profiling data and outputs folded stack traces compatible with the Flame Graph tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
analyzeme.workspace = true
clap.workspace = true
measureme.workspace = true
