[package]
name = "summarize"
version = "11.0.1"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
license.workspace = true

[dependencies]
measureme = { path = "../measureme" }
analyzeme = { path = "../analyzeme" }
prettytable-rs = "0.10"
rustc-hash = "1.0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
