[package]
name = "summarize"
description = "Produces a human readable summary of `measureme` profiling data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
analyzeme.workspace = true
clap.workspace = true
measureme.workspace = true
prettytable-rs.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
